Make canvas stop squishing

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -9,6 +9,7 @@ html, body {
 }
 
 #app {
+	min-width: 100vh;
 	width: 50%;
 	height: 100%;
 	margin: 0 auto;
